manifests/traefik-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
spec:
  rules:
  - host: nexus.kubenetes.beagledata.local
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus3
          servicePort: 80
  - host: gitlab.kubenetes.beagledata.local
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 8005
  - host: gitlab.beagledata.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 8005        
  - host: gitlab.gitlab.kubenetes.beagledata.local
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 8005
  - host: registry.gitlab.kubenetes.beagledata.local
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 8105
  - host: mattermost.gitlab.kubenetes.beagledata.local
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 8065
  - host: prometheus.gitlab.kubenetes.beagledata.local
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 9090
---
